--- a/Final/Storyboard/Base.lproj/Main.storyboard
+++ b/Final/Storyboard/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <scene sceneID="UDz-33-NOe">
             <objects>
                 <viewControllerPlaceholder storyboardName="ImageSelect" id="P4c-Bj-rVe" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="kwQ-Ky-hro"/>
+                    <tabBarItem key="tabBarItem" title="画像選択" image="plus" catalog="system" id="kwQ-Ky-hro"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DXF-zM-03Q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -20,7 +20,7 @@
         <scene sceneID="bse-Hk-bbY">
             <objects>
                 <viewControllerPlaceholder storyboardName="Home" id="Kty-xE-rbL" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="8Rq-w8-KQS"/>
+                    <tabBarItem key="tabBarItem" title="ホーム" image="house" catalog="system" id="8Rq-w8-KQS"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CLX-ph-7KK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -30,16 +30,26 @@
         <scene sceneID="F9H-jx-pDl">
             <objects>
                 <viewControllerPlaceholder storyboardName="Setting" id="Xx1-gG-qwy" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="Yz3-wm-Zdu"/>
+                    <tabBarItem key="tabBarItem" title="設定" image="gear" catalog="system" id="Yz3-wm-Zdu"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bld-bz-h2C" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="366" y="603"/>
         </scene>
+        <!--Camera-->
+        <scene sceneID="kxx-IM-ayz">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="Camera" storyboardName="Camera" id="fzZ-7u-pwz" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="カメラ" image="camera" catalog="system" id="54h-MH-LOT"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="akG-aF-Oeg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="674" y="556"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Xis-ei-Jfr">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="JYv-FH-3Ne" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="JYv-FH-3Ne" customClass="TabBarController" customModule="Final" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="oib-Yn-K1M">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
@@ -49,6 +59,7 @@
                     <connections>
                         <segue destination="P4c-Bj-rVe" kind="relationship" relationship="viewControllers" id="eCJ-yV-Mhh"/>
                         <segue destination="Kty-xE-rbL" kind="relationship" relationship="viewControllers" id="EQL-FW-6sj"/>
+                        <segue destination="fzZ-7u-pwz" kind="relationship" relationship="viewControllers" id="iot-bw-HpZ"/>
                         <segue destination="Xx1-gG-qwy" kind="relationship" relationship="viewControllers" id="qsQ-tf-ksO"/>
                     </connections>
                 </tabBarController>
@@ -57,4 +68,10 @@
             <point key="canvasLocation" x="137.68115942028987" y="91.741071428571431"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="camera" catalog="system" width="128" height="96"/>
+        <image name="gear" catalog="system" width="128" height="119"/>
+        <image name="house" catalog="system" width="128" height="110"/>
+        <image name="plus" catalog="system" width="128" height="113"/>
+    </resources>
 </document>
